# receptHyveln

./: .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  deploy.config.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml
app/: config.py  extractor.py  fetcher.py  main.py  nouw.py  rate_limit.py  section_parser.py  units.py
scripts/: deploy-vps.sh
static/: app.js  index.html  style.css
tests/: test_config.py  test_extractor.py  test_fetcher.py  test_main.py  test_nouw.py  test_section_parser.py  test_units.py
