[project]
name = "recept-hyveln"
version = "0.1.0"
description = "Extract clean recipe ingredients and steps from any recipe URL"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "httpx>=0.28.0,<1.0.0",
    "recipe-scrapers>=15.0.0,<16.0.0",
    "slowapi>=0.1.9,<0.2.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
